<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.FragmentUserProfile" android:id="@+id/UserProfileFrameLayout"
>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/user_profile_constraintLayout">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp" tools:src="@tools:sample/avatars[9]"
                android:id="@+id/imageView" android:layout_marginTop="64dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:contentDescription="@string/todo" android:visibility="visible"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/name" android:importantForAutofill="no"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/user_city" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText" android:hint="@string/city"
                android:autofillHints=""/>
        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/user_city"
                app:layout_constraintStart_toStartOf="@+id/user_city"
                android:id="@+id/genderRadioGroup" android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView">
            <RadioButton
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/maleRadio" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/femaleRadio" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/other" android:layout_weight="1"/>
        </RadioGroup>
        <TextView
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/user_city"
                app:layout_constraintStart_toStartOf="@+id/user_city" android:layout_marginStart="8dp"
                android:textSize="18sp"/>
        <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="8dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="8dp"
                                                   app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup"
                                                   android:id="@+id/userProfileSave" android:text="@string/save"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>