<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">
    <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                               android:layout_height="wrap_content"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               android:layout_marginEnd="8dp"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:layout_marginStart="8dp"
                                               android:id="@+id/googleSignIn" android:text="@string/google"
                                               app:layout_constraintHorizontal_bias="0.498"
                                               android:layout_marginTop="8dp"
                                               app:layout_constraintTop_toBottomOf="@+id/signin_userSignIn"/>
    <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                               android:layout_height="wrap_content"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               android:layout_marginEnd="8dp"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:layout_marginStart="8dp"
                                               android:text="@string/sign_up" android:id="@+id/signin_userSignIn"
                                               android:layout_marginTop="8dp"
                                               app:layout_constraintTop_toBottomOf="@+id/user_password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@android:string/status_bar_notification_info_overflow"
            android:ems="10"
            android:id="@+id/user_name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/name" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/user_email"
            app:layout_constraintTop_toBottomOf="@+id/user_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:hint="@string/email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/user_password" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/user_email" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/password"/>

</android.support.constraint.ConstraintLayout>