<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <android.support.v7.widget.AppCompatButton android:layout_width="85dp"
                                               android:layout_height="41dp"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               android:layout_marginEnd="8dp"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:layout_marginStart="8dp"
                                               android:id="@+id/signUpButton"
                                               android:layout_marginTop="64dp"
                                               app:layout_constraintTop_toBottomOf="@+id/divider"
                                               android:text="@string/sign_up"/>
    <android.support.v7.widget.AppCompatButton android:layout_width="wrap_content"
                                               android:layout_height="wrap_content" android:layout_marginBottom="64dp"
                                               app:layout_constraintBottom_toBottomOf="parent"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               android:layout_marginEnd="8dp"
                                               app:layout_constraintStart_toStartOf="parent"
                                               android:layout_marginStart="8dp" android:id="@+id/loginButton"
                                               android:layout_marginTop="8dp"
                                               app:layout_constraintTop_toBottomOf="@+id/signUpButton"
                                               android:text="@string/login"/>
    <View
            android:id="@+id/divider"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="gone" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailText" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            app:layout_constraintEnd_toEndOf="@+id/emailText" app:layout_constraintStart_toStartOf="@+id/emailText"
            app:layout_constraintTop_toBottomOf="@+id/emailText" android:hint="@string/password" android:autofillHints=""/>

</android.support.constraint.ConstraintLayout>